chamber/styles/base.css
/* base css for chamber homepage build */
:root {
    /* Colors for base-palette: ; */
    --primary-color: #002659;
    --secondary-color: #d0af4f;
    --accent1-color: #e9d8b0;
    --accent2-color: #0086e5;

    /* Fonts */
    --heading-font: "Fjalla One", Arial, Helvetica, sans-serif;
    --paragraph-font: "Libre Baskerville", "Times New Roman", Times, serif;
}

body {
    margin: auto;
    text-align: center;
    font-family: var(--paragraph-font);
    color: var(--primary-color);
}

header {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    background-color: var(--primary-color);
    padding: 1em;
    text-align: center;
    white-space: nowrap;
}

header img {
    display: block;
    margin: auto;
    padding-bottom: 1vh;
    filter: invert(1);
    width: 20vw;
    object-fit: cover;
}

h1 {
    font-size: 6vw;
    color: white;
}
h1,
h2,
h3, 
h4 {
    font-family: var(--heading-font);
    user-select: none;
}
h2 {
    font-size: 6vw;
    color: var(--primary-color);
}

h2.dummy{
    margin-top: 10vw;
}
p.dummy{
    padding-top: 10vw;
    font-size: large;
}
a.dummy{
    display: block;
    text-decoration: none;
    font-size: 10vw;
}
a.dummy:hover {
    transform: scale(1.3);
}
/* Dropdown */
#menu {
    font-size: 2em;
    border-radius: 5px;
    background: var(--accent1-color);
    color: var(--primary-color);
    position: absolute;
    top: 1rem;
    left: 1rem;
    min-width: 80px;
    padding: 0;
}
#menu::before {
    content: attr(data-content);
}
#menu.open::before {
    content: attr(data-content);
    z-index: 4;
}
.navigation {
    display: none;
}
nav{
    padding: 5px;
}
.navigation.open {
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 6vh;
    left: 0;
    background-color: var(--accent1-color);
    width: 100vw;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
}
.navigation a {
    color: var(--primary-color);
    font-size: 1em;
    font-weight: bold;
    padding: 12px 16px;
    text-decoration: none;
}
.navigation a:hover {
    background-color: var(--primary-color);
    color: var(--accent1-color);
    cursor: grab;
    border-radius: 10px;
}

.dark-mode-toggle {
    transition: transform 5s ease;
    position: absolute;
    z-index: 5;
    top: 1vw;
    right: 1vw;
    border-radius: 20px;
    background-color: var(--accent1-color);
    color: var(--primary-color);
    padding: 10px 0px;
    min-width: 100px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);;
}
body.dark-mode {
    transition: background-color 0.5s ease, color 0.5s ease;
    background-color: #05112bec;
    color: white;
}
body.dark-mode h2 {
    color: white;
}
.dark-mode-toggle.light {
    display: none;
}
.dark-mode-toggle.dark {
    display: inline-block;
}

.spacer {
    max-width: 100vw;
    height: 1vw;
    background-color: var(--secondary-color);
}
.spacer2 {
    max-width: 100vw;
    height: 3vw;
    background-color: var(--secondary-color);
}
/* slider info */
/* Slideshow container */
.slideshow-container {
    width: 100%;
    display: block;
    position: relative;
    margin: auto;
}
/* Hide the images by default */
.mySlides {
    display: none;
    position: relative;
}
.mySlides img {
    max-width: 97%;
    border: 5px solid var(--primary-color)
}
button.join {
    position: absolute;
    top: 1.5vw;
    left: 1.5vw;
    min-width: 20vw;
    font-size: large;
}
button {
    min-width: 160px;
    padding: 5px 5px;
    cursor: pointer;
    transition: all 0.3s ease;
    position: relative;
    display: inline-block;
    outline: none;
    border-radius: 5px;
    box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5), 7px 7px 20px 0px rgba(0, 0, 0, .1), 4px 4px 5px 0px rgba(0, 0, 0, .1);
    background: var(--primary-color);
    color: var(--secondary-color);
    text-decoration: none;
    text-shadow: 1px 0.5px #242222;
    font-size: 1rem;
}

.main-grid {
    display: grid;
    grid-template-rows: auto;
    grid-template-columns: 1fr;
}
.events-card {
    display: grid;
    grid-template-columns: 1fr;
    padding: 10px;
    border: 10px solid var(--secondary-color);
    
}
.events{
    width:70%;
    margin: auto;
}
.events-card h2{
    grid-column: 1;
    text-align: center;
}
.events-card section{
    background-color: var(--accent1-color);
    border: 3px solid var(--primary-color);
    padding: 5px;
    margin: 5px;
}
.card-img img {
    display: block;
    width:100%;
    height: auto;
}
h3.card {
    font-size: 1.5rem;
    color: var(--primary-color);
    margin-bottom: 20px;
}
.event-details {
    bottom: 15px;
}

.weather,
.members {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 5px 0;
    padding: 0.75em;
    border: 10px solid var(--secondary-color);    
}
.weather-card {
    background-color: var(--accent1-color);
    padding: 20px 50px;
    box-sizing: border-box;
    color: var(--primary-color);
    border: 5px solid var(--primary-color);
    margin-bottom: 20px;
}
.mem-row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 4px;
}
.mem-col {
    flex: 50%;
    padding: 0 4px;
    max-width: 45%;
}
.mem-col img {
    margin-top: 8px;
    vertical-align: middle;
    width: 60%;
}

/* Discover Page CSS */

.locals{
    border: 10px solid var(--secondary-color);
    margin-top: 5px;
}
.local-cards {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 10px 10px 10px;
    border: 5px solid var(--accent1-color);
    position:relative;
}
.local-cards img {
    max-width: 100%;
    max-height: 100%;
    height: auto;
}
.caption {
    background-color: rgba(0, 38, 89, 0.75);
    display: block;
    width: 95%;
    position: absolute;
    bottom: 5px;
}
.cap-text {
    color: var(--accent1-color);
    padding: 8px;
    margin: 0;
}

#last-visit, #visits {
    font-size: large;
    padding: 10px;
}
.content {
    border: 5px solid var(--accent1-color);
    margin: 10px;
    width: 95%;
}


.cal,
.visitor-info,
.venues {
    border: 10px solid var(--secondary-color);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 5px 0;
}
.cal-container {
    border: 3px solid var(--accent1-color);
    background-color: var(--secondary-color);
    margin: 0 5px 5px 5px;
    width: 95%;
}
.cal iframe {
    display: block;
    width: 100%;
}

.venues{
    padding-bottom: 15px;
}
.accordion-card {
    border-bottom: 1px solid var(--accent1-color);
    align-items: flex-start;
    width: 95%;    
}
.accordion {
    background-color: var(--accent1-color);
    color: var(--primary-color);
    cursor: pointer;
    width: 100%;
    text-align: left;
    line-height: 2rem;
    text-shadow: none;
    transition: background-color 0.3s ease;
}
.accordion.active,
.accordion:hover {
    background-color: var(--secondary-color);
}
.panel {
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.3s ease;
}
.panel img {
    width: 100%;
    height: auto;
    border-radius: 5px;
}

footer {
    background-color: var(--primary-color);
    color: var(--accent1-color);
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}
footer a {
    text-decoration: none;
}
.social img {
    width: 10%;
    margin: 15px 5px;
    filter: invert(1);
}
.social img:hover{
    transform: scale(1.2);
}
footer p{
    margin: 0 7px 0 7px;
    font-size: small;
}

/* Join Page CSS */
/* -----Form----- */
.ma1 {
    width: 95vw;
    margin: auto;
    max-width: 400px;
}
.ma1 fieldset {
    margin: .5rem 0;
    border: 5px solid var(--primary-color);
    border-radius: 10px;
    padding: .5rem 2%;
    display: flex;
    flex-direction: column;
    align-content: flex-start;
}
.ma1 legend {
    color: var(--primary-color);
    font-size: large;
    padding: 0 .5rem;
}
.ma1 label {
    display: inline-block;
    padding-top: 1rem;
    color: var(--primary-color);
    /* font-size: larger;    */
    margin-left: 0;
    text-align: left;
}
.ma1 input[type="text"],
.ma1 input[type="email"],
.ma1 input[type="tel"],
.ma1 input[type="url"],
.ma1 select,
.ma1 textarea
 {
    border: solid 2px var(--secondary-color);
    border-radius: 6px;
    padding: 0.75rem;
    width: 90%;
    max-width: 500px;
    background-color: #0086e511;
}
.ma1 input[type="radio"] {
    margin-right: 0.5rem;
    width: 20px;
    height: 20px;
}
.ma1 textarea {
    overflow: hidden;
    resize: none;
}
.ma1 input:required,
.ma1 textarea:required {
    border-left: 10px solid red;
}
.ma1 input:required:valid {
    border-left: 10px solid green
}
.ma1 input[type="submit"] {
    min-width: 160px;
    padding: 15px 15px;
    cursor: pointer;
    transition: all 0.3s ease;
    position: relative;
    display: flex;
    outline: none;
    border-radius: 5px;
    box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5), 7px 7px 20px 0px rgba(0, 0, 0, .1), 4px 4px 5px 0px rgba(0, 0, 0, .1);
    background: var(--primary-color);
    color: var(--secondary-color);
    text-shadow: 1px 0.5px #242222;
    margin-bottom: 2rem;
}

/* -----Table CSS----- */
.membership-benefit-table {
    border: 5px solid var(--primary-color);
    border-radius: 10px;
    margin: 2.5rem 0.5rem 2.5rem .5rem;
    display: flex;
    width: fit-content;
    /* height: fit-content; */
    }
.mem-ben {
    text-align: center;
    border: 5px solid var(--secondary-color);
    border-radius: 10px;
    border-collapse: collapse;
    width: 100%;
    overflow: hidden;
}
caption {
    caption-side: bottom;
    padding-top: 10px;
    font-size: small;
}
.mem-ben thead tr th {
    background-color: var(--secondary-color);
    font-size: larger;
    padding: 15px;
}
.mem-ben th{
    background-color: var(--accent1-color);
}
th, td {
    padding: 10px;
    border: 2px solid var(--secondary-color);
    font-size: small;
}
body.dark-mode thead{
    background-color: var(--primary-color);
    border: 2px solid var(--secondary-color)
}
tr:nth-child(even){
    background-color: var(--accent1-color);
}

